--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,13 @@
             android:exported="false" />
         <activity
             android:name=".videoDisplay.VideoDisplayActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="false" />
         <activity
             android:name=".RegistrationActivity2"
             android:exported="false" />
         <activity
-            android:name=".videoListDisplay.MainActivity"
+            android:name=".videoList.VideoListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
