--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,8 +21,11 @@
         android:theme="@style/Theme.YouTube"
         tools:targetApi="31">
         <activity
+            android:name=".PhotoActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUpPage.SignUpActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".addVideo.AddVideoActivity"
             android:exported="false" />
@@ -37,9 +45,5 @@
             </intent-filter>
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
