--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:name=".utils.MyApplication"
@@ -20,7 +22,8 @@
         android:roundIcon="@drawable/ic_amazing_team"
         android:supportsRtl="true"
         android:theme="@style/Theme.YouTube"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".view.ui.SignUpActivity"
             android:exported="false" />
