--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:name=".utils.MyApplication"
         android:allowBackup="true"
@@ -22,8 +21,11 @@
         android:roundIcon="@drawable/ic_amazing_team"
         android:supportsRtl="true"
         android:theme="@style/Theme.YouTube"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".view.ui.ProfileActivity"
+            android:exported="false" />
         <activity
             android:name=".view.ui.SignUpActivity"
             android:exported="false" />
@@ -39,10 +41,11 @@
             android:exported="false" />
         <activity
             android:name=".view.ui.VideoListActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
